--- a/forms.html
+++ b/forms.html
@@ -35,7 +35,7 @@
       inset:0;
       pointer-events:none;
       z-index:9998;
-      opacity:.9;
+      opacity:1;
     }
     @media (max-width: 991px){
       canvas.cursor-trail{ display:none; }
@@ -44,7 +44,7 @@
       canvas.cursor-trail{ display:none; }
     }
 
-    /* Preloader (scaled-back “template-ish” opening) */
+    /* Preloader (Davies-style: title splash -> bars -> content) */
     .preloader{
       position:fixed;
       inset:0;
@@ -54,7 +54,6 @@
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      gap:18px;
       padding:24px;
       transition:opacity .45s ease, visibility .45s ease;
     }
@@ -63,22 +62,49 @@
       visibility:hidden;
     }
 
-    .preloader .site-name{
+    /* BIG title splash */
+    .splash-title{
+      font-family:"Montserrat",sans-serif;
+      font-weight:700;
+      letter-spacing:.34em;
+      text-transform:uppercase;
+      color:#fff;
+      text-align:center;
+      font-size:clamp(2.2rem, 6.2vw, 4.6rem);
+      line-height:1.05;
+      opacity:1;
+      transform:translateY(0);
+      transition:opacity .45s ease, transform .45s ease;
+      user-select:none;
+      margin-bottom:8px;
+    }
+
+    /* Small brand line + bars (start hidden) */
+    .site-name,
+    .preloader-gutters{
+      opacity:0;
+      transform:translateY(10px);
+      transition:opacity .45s ease, transform .45s ease;
+    }
+
+    .site-name{
       font-family:"Montserrat",sans-serif;
       letter-spacing:.28em;
       text-transform:uppercase;
       font-size:1.05rem;
       color:rgba(255,255,255,.92);
+      margin-top:14px;
     }
-    .preloader .site-name span:first-child{font-weight:700;}
-    .preloader .site-name span:last-child{font-weight:400;}
+    .site-name span:first-child{font-weight:700;}
+    .site-name span:last-child{font-weight:400;}
 
     .preloader-gutters{
       width:min(540px, 92vw);
       display:grid;
       grid-template-columns:repeat(8,1fr);
       gap:8px;
-      opacity:.95;
+      opacity:0;
+      margin-top:14px;
     }
     .preloader-gutters .bar{
       height:56px;
@@ -117,7 +143,18 @@
       100%{background-position:100% 50%;}
     }
 
-    /* Your original portal layout */
+    /* Stage toggle: when bars start, splash fades out, bars fade in */
+    .preloader.stage-bars .splash-title{
+      opacity:0;
+      transform:translateY(-10px);
+    }
+    .preloader.stage-bars .site-name,
+    .preloader.stage-bars .preloader-gutters{
+      opacity:1;
+      transform:translateY(0);
+    }
+
+    /* Your portal layout */
     .overlay{
       position:fixed;
       inset:0;
@@ -203,7 +240,7 @@
       .card{padding:26px 18px 22px;}
     }
 
-    /* Optional: “Go top” button (kept minimal) */
+    /* Go top button */
     #goTop{
       position:fixed;
       right:16px;
@@ -235,12 +272,13 @@
 </head>
 
 <body>
-  <!-- Cursor trail (desktop only) -->
   <canvas class="cursor-trail" id="trail" aria-hidden="true"></canvas>
 
-  <!-- Preloader -->
   <div class="preloader" id="preloader" aria-label="Loading">
+    <div class="splash-title">VISTA GEOMATICS</div>
+
     <div class="site-name"><span>VISTA</span> <span>GEOMATICS</span></div>
+
     <div class="preloader-gutters" aria-hidden="true">
       <div class="bar"><div class="inner-bar"></div></div>
       <div class="bar"><div class="inner-bar"></div></div>
@@ -253,7 +291,6 @@
     </div>
   </div>
 
-  <!-- Portal UI (same functionality as your file) -->
   <div class="overlay">
     <div class="card">
       <div class="logo-text">
@@ -280,35 +317,41 @@
   <button id="goTop" type="button" aria-label="Back to top">↑</button>
 
   <script>
-    // ---------- Preloader: hide after load (fast, clean) ----------
+    // ----- Preloader sequence: Splash title -> Bars -> Hide on load -----
     (function () {
       const pre = document.getElementById("preloader");
       const prefersReduced = window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches;
 
-      // If reduced motion, hide almost immediately.
-      const minShowMs = prefersReduced ? 120 : 520;
+      // How long to show the big title before switching to bars
+      const splashMs = prefersReduced ? 120 : 850;  // Davies-ish
+      // Minimum total time before allowing hide
+      const minTotalMs = prefersReduced ? 180 : 1150;
 
       const start = performance.now();
+
+      // Switch to bars stage after splash
+      setTimeout(() => {
+        pre.classList.add("stage-bars");
+      }, splashMs);
+
+      // Hide once window load fires, but never before minTotalMs
       window.addEventListener("load", () => {
         const elapsed = performance.now() - start;
-        const delay = Math.max(0, minShowMs - elapsed);
+        const delay = Math.max(0, minTotalMs - elapsed);
         setTimeout(() => pre.classList.add("hide"), delay);
       });
     })();
 
-    // ---------- Go Top button ----------
+    // ----- Go Top -----
     (function () {
       const btn = document.getElementById("goTop");
-      const toggle = () => {
-        // Page is short, but keep behavior consistent.
-        btn.classList.toggle("show", window.scrollY > 120);
-      };
+      const toggle = () => btn.classList.toggle("show", window.scrollY > 120);
       window.addEventListener("scroll", toggle, { passive: true });
       toggle();
       btn.addEventListener("click", () => window.scrollTo({ top: 0, behavior: "smooth" }));
     })();
 
-    // ---------- Cursor trail (lightweight, desktop only) ----------
+    // ----- Cursor "laser" trail (tight streak, not circles) -----
     (function () {
       const canvas = document.getElementById("trail");
       if (!canvas) return;
@@ -316,6 +359,7 @@
       const prefersReduced = window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches;
       const isCoarse = window.matchMedia && window.matchMedia("(pointer: coarse)").matches;
       const isSmall = window.matchMedia && window.matchMedia("(max-width: 991px)").matches;
+
       if (prefersReduced || isCoarse || isSmall) {
         canvas.style.display = "none";
         return;
@@ -325,8 +369,8 @@
       let w = 0, h = 0;
 
       const resize = () => {
-        w = canvas.width = window.innerWidth * devicePixelRatio;
-        h = canvas.height = window.innerHeight * devicePixelRatio;
+        w = canvas.width = Math.floor(window.innerWidth * devicePixelRatio);
+        h = canvas.height = Math.floor(window.innerHeight * devicePixelRatio);
         canvas.style.width = window.innerWidth + "px";
         canvas.style.height = window.innerHeight + "px";
         ctx.setTransform(devicePixelRatio, 0, 0, devicePixelRatio, 0, 0);
@@ -334,58 +378,66 @@
       window.addEventListener("resize", resize);
       resize();
 
-      // Points follow mouse; we draw fading circles (Vista gradient feel without heavy libs)
+      // Point buffer
       const points = [];
-      const MAX = 26;
-
-      const state = { x: window.innerWidth / 2, y: window.innerHeight / 2, active: false };
+      const MAX = 20;            // tighter trail
+      const DECAY = 0.88;        // fades quickly (laser feel)
 
       window.addEventListener("mousemove", (e) => {
-        state.x = e.clientX;
-        state.y = e.clientY;
-        state.active = true;
-        points.push({ x: state.x, y: state.y, a: 1 });
+        points.push({ x: e.clientX, y: e.clientY, a: 1 });
         if (points.length > MAX) points.shift();
       }, { passive: true });
 
-      // If mouse leaves window, fade out
-      window.addEventListener("mouseleave", () => { state.active = false; }, { passive: true });
-
-      function tick() {
+      function draw() {
         ctx.clearRect(0, 0, window.innerWidth, window.innerHeight);
 
-        // Fade points
-        for (let i = 0; i < points.length; i++) {
-          const p = points[i];
-          p.a *= 0.92; // decay
-        }
+        // fade points
+        for (const p of points) p.a *= DECAY;
+        while (points.length && points[0].a < 0.05) points.shift();
 
-        // Draw
-        for (let i = 0; i < points.length; i++) {
-          const p = points[i];
-          if (p.a < 0.02) continue;
+        if (points.length >= 2) {
+          ctx.globalCompositeOperation = "lighter";
+          ctx.lineCap = "round";
+          ctx.lineJoin = "round";
 
-          const r = 10 + i * 0.35;
-          const alpha = Math.min(0.28, p.a * 0.28);
+          for (let i = 1; i < points.length; i++) {
+            const p0 = points[i - 1];
+            const p1 = points[i];
+            const t = i / (points.length - 1);
 
-          // Subtle “dual-tone” halo
+            // keep it tight: small widths, bright head
+            const width = 1.2 + t * 1.0;
+            const alpha = Math.min(0.95, p1.a) * (0.25 + t * 0.55);
+
+            const grad = ctx.createLinearGradient(p0.x, p0.y, p1.x, p1.y);
+            grad.addColorStop(0, `rgba(31,156,240,${alpha})`);
+            grad.addColorStop(1, `rgba(0,90,156,${alpha})`);
+
+            ctx.strokeStyle = grad;
+            ctx.lineWidth = width;
+            ctx.beginPath();
+            ctx.moveTo(p0.x, p0.y);
+            ctx.lineTo(p1.x, p1.y);
+            ctx.stroke();
+          }
+
+          // bright "laser tip" at the last point
+          const head = points[points.length - 1];
+          ctx.globalCompositeOperation = "source-over";
           ctx.beginPath();
-          ctx.arc(p.x, p.y, r, 0, Math.PI * 2);
-          ctx.fillStyle = `rgba(31,156,240,${alpha})`; // vista-blue
+          ctx.arc(head.x, head.y, 1.8, 0, Math.PI * 2);
+          ctx.fillStyle = "rgba(255,255,255,0.85)";
           ctx.fill();
 
           ctx.beginPath();
-          ctx.arc(p.x + 2, p.y + 2, r * 0.72, 0, Math.PI * 2);
-          ctx.fillStyle = `rgba(0,90,156,${alpha * 0.9})`; // vista-blue-dark
+          ctx.arc(head.x, head.y, 6.5, 0, Math.PI * 2);
+          ctx.fillStyle = "rgba(31,156,240,0.12)";
           ctx.fill();
         }
 
-        // Trim dead points
-        while (points.length && points[0].a < 0.03) points.shift();
-
-        requestAnimationFrame(tick);
+        requestAnimationFrame(draw);
       }
-      requestAnimationFrame(tick);
+      requestAnimationFrame(draw);
     })();
   </script>
 </body>
